[package]
name = "hello_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
serde = "1.0.152"
serde_json = "1.0.93"
stylist = { version = "0.12.0", features = ["parser", "yew"] }
yew = { version = "0.20.0", features = ["csr"] }
